modified endpoint